# adventofcode2024-hs

./: README.md  adventofcode2024-hs.cabal
lib/AoC/: Lib.hs
src/: Day00.hs  Day1.hs  Day2.hs
