cabal-version:      2.4
name:               adventofcode2024-hs
version:            0.1.0.0

author:             Bob Klaase
maintainer:         ''


common common
  default-language:   Haskell2010
  build-depends:      base ^>=4.17.2.1

common solution
  build-depends:      adventofcode2024-hs
  hs-source-dirs:     src

library
  import:             common
  build-depends:      time >= 1.11.1.1
  exposed-modules:    AoC.Lib
  hs-source-dirs:     ./lib

executable day00
  import:             common,solution
  main-is:            Day00.hs

executable day1
  import:             common,solution
  main-is:            Day1.hs
